In tshark's "io,stat" eliminate the unrequested "Frames and bytes" col, fix formatting, and add "Duration"
This issue was migrated from bug 8839 in our old bug tracker.
Original bug information:
Reporter: Cal Turney
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: All
Platform: All
Version: 1.11.x (Experimental)
Attachments:
before-and-after-patches.txt: Before and after examples of the fixes and the enhancement
tap-iostat.c.patch: tap-iostat.c.patch