From Cal Turney: - tshark -q -z io,stat,1 causes core dump for files larger than ~2MB (with this fix it will still overflow on 32-bits for frame time > 4294s)

- In tshark's "io,stat" eliminate the unrequested "Frames and bytes" col, fix formatting, and add "Duration"

From me:
Added casts to squelch compiler warnings on win7 64bit

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=8839

svn path=/trunk/; revision=50488